--- a/three.html
+++ b/three.html
@@ -13,35 +13,35 @@
     </div>
     <div class="body">
         <div class="item two">
-            <div class="name">Бессараб Юрий Владимирович <span class="rating">4.6 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 426.667 426.667" style="enable-background:new 0 0 426.667 426.667;" xml:space="preserve"><polygon style="fill:#ffc107" points="213.333,10.441 279.249,144.017 426.667,165.436 320,269.41 345.173,416.226 213.333,346.91 81.485,416.226 106.667,269.41 0,165.436 147.409,144.017 "/></svg></span></div>
-            <div class="desc">рабочий на ГФР</div>
-            <div class="title">Список выполненных задач:</div>
+            <div class="name">Колодков Павел Николаевич <span class="rating">4.1 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 426.667 426.667" style="enable-background:new 0 0 426.667 426.667;" xml:space="preserve"><polygon style="fill:#ffc107" points="213.333,10.441 279.249,144.017 426.667,165.436 320,269.41 345.173,416.226 213.333,346.91 81.485,416.226 106.667,269.41 0,165.436 147.409,144.017 "/></svg></span></div>
+            <div class="desc">геофизик, занятый регистрацией</div>
+            <div class="title">Список поставленных задач:</div>
         </div>
         <div class="table">
             <div class="line head">
                 <div class="zadacha">Задача</div>
                 <div class="data">Дата</div>
-                <div class="mesto">Местоположение</div>
+                <div class="mesto">Статус задачи</div>
             </div>
             <div class="line">
                 <div class="zadacha">Замена АКБ</div>
                 <div class="data">27.05.2023</div>
-                <div class="mesto"><a href="./img/5491.jpg">R5491 PK2495</a></div>
+                <div class="mesto">В процессе</div>
             </div>
             <div class="line">
                 <div class="zadacha">Замена сейсмокосы</div>
                 <div class="data">27.05.2023</div>
-                <div class="mesto"><a href="./img/5395.jpg">R5395 PK2235</a></div>
+                <div class="mesto">Выбор исполнителя</div>
             </div>
             <div class="line">
                 <div class="zadacha">Замена группы геофонов</div>
                 <div class="data">27.05.2023</div>
-                <div class="mesto"><a href="./img/5455.jpg">R5455 PK2387</a></div>
+                <div class="mesto">Задача выполнена</div>
             </div>
             <div class="line">
                 <div class="zadacha">Замена модуля CX</div>
                 <div class="data">27.05.2023</div>
-                <div class="mesto"><a href="./img/5455.jpg">R5455 PK2387</a></div>
+                <div class="mesto">Задача выполнена</div>
             </div>
         </div>
     </div>
